--- a/Storage/zed_settings.json
+++ b/Storage/zed_settings.json
@@ -28,7 +28,7 @@
 	"theme": {
 		"mode": "system",
 		"light": "One Light",
-		"dark": "One Dark Pro"
+		"dark": "One Dark"
 	},
 	"project_panel": {
 		"indent_guides": {
