Add stdheader script, 42_C formatter, and config files
- Introduce stdheader script for inserting file headers - Add 42_C
formatter wrapper script - Update zed_settings.json to pass buffer path
to formatter - Add config.json for user metadata

--- a/Storage/zed_settings.json
+++ b/Storage/zed_settings.json
@@ -85,7 +85,8 @@
 			"enable_language_server": true,
 			"formatter": {
 				"external": {
-					"command": "c_formatter_42"
+					"command": "c_formatter_42",
+					"arguments": ["{buffer_path}"]
 				}
 			}
 		},
