Refactor stdheader to use config-driven header generation
Update zed_settings.json ignore list and config.json for new header
format

--- a/Storage/zed_settings.json
+++ b/Storage/zed_settings.json
@@ -77,7 +77,8 @@
 		"**/.DS_Store",
 		"**/Thumbs.db",
 		"**/.vscode",
-		"**/*.o"
+		"**/*.o",
+		"compile_flags.txt"
 	],
 	"languages": {
 		"C": {
