--- a/config.json
+++ b/config.json
@@ -1,6 +1,18 @@
 {
-	"42": {
+	"CodamHeader": {
+		"length": 80,
+		"margin": 2,
 		"email": "qvan-der@student.codam.nl",
-		"username": "qvan-der"
+		"username": "qvan-der",
+		"asciiart": [
+			"       ::::::::         ",
+			"     :+:    :+:         ",
+			"    +:+                 ",
+			"   +#+                  ",
+			"  +#+                   ",
+			"#+#    #+#              ",
+			"########   odam.nl      "
+		],
+		"autoinsert": true
 	}
 }
