Add --insert option and C++ support to stdheader
Validate --stdin-filepath requires an argument and introduce a --insert/
FORCE_INSERT flag that overrides the config autoinsert. Detect C++
extensions (*.cpp, *.hpp) for comment style. Update Zed settings to
invoke stdheader --insert for C++ and Make.

--- a/Storage/zed_settings.json
+++ b/Storage/zed_settings.json
@@ -97,12 +97,30 @@
 				}
 			}
 		},
+		"C++": {
+			"format_on_save": "on",
+			"enable_language_server": true,
+			"formatter": {
+				"external": {
+					"command": "stdheader",
+					"arguments": [
+						"--insert",
+						"--stdin-filepath",
+						"{buffer_path}"
+					]
+				}
+			}
+		},
 		"Make": {
 			"format_on_save": "on",
 			"formatter": {
 				"external": {
 					"command": "stdheader",
-					"arguments": ["--stdin-filepath", "{buffer_path}"]
+					"arguments": [
+						"--insert",
+						"--stdin-filepath",
+						"{buffer_path}"
+					]
 				}
 			}
 		},
