Use Catppuccin Macchiato icon theme to zed settings

--- a/Storage/zed_settings.json
+++ b/Storage/zed_settings.json
@@ -19,7 +19,7 @@
 	"features": {
 		"edit_prediction_provider": "copilot"
 	},
-	"icon_theme": "VSCode Icons (Dark)",
+	"icon_theme": "Catppuccin Macchiato",
 	"ui_font_size": 16,
 	"buffer_font_size": 15,
 	"buffer_line_height": {
