chore: Update editor theme settings
- Updated light theme to Catppuccin Mocha
- Updated dark theme to Catppuccin Mocha

--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -27,8 +27,8 @@
 	},
 	"theme": {
 		"mode": "system",
-		"light": "One Light",
-		"dark": "One Dark"
+		"light": "Catppuccin Mocha",
+		"dark": "Catppuccin Mocha"
 	},
 	"project_panel": {
 		"indent_guides": {
